--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 }
 body {
     background-color: black;
-    color: rgb(8, 77, 8);
+    color: rgb(33, 156, 33);
 }
 h2 {
     font-family: 'Courier New', Courier, monospace;
@@ -140,6 +140,9 @@ footer {
     margin: 4% auto;
     text-align: center;
 }
+footer p {
+    color: rgb(33, 156, 33)
+}
 .footer-container-top {
     background-color: rgb(0, 0, 0);
     padding: 2%;
@@ -150,7 +153,7 @@ footer {
 }
 .footer-container-bottom {
     background-color: rgb(0, 0, 0);
-    padding-bottom: 02%;
+    padding-bottom: 2%;
     margin: 0%; 
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
@@ -165,7 +168,7 @@ footer {
 }
 .footer-container-bottom p a{
     text-decoration: none;
-    color: rgb(8, 77, 8);
+    color: rgb(33, 156, 33);
 }
 .footer-container-bottom p a:hover{
     text-decoration: none;
@@ -176,6 +179,9 @@ footer {
     background-color: rgba(46, 43, 43, 0.35);
     margin: 0% 30% 0% 30%;
     box-shadow: 0px 0px 110px rgb(65, 13, 13);
+    border-left: 1px solid rgb(33, 156, 33);
+    border-right: 1px solid rgb(33, 156, 33);
+    border-top: 1px solid rgb(33, 156, 33);
 }
 .main-container {
     background-color: rgb(0, 0, 0);
